<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#312196F3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="275dp"
        android:layout_height="67dp"
        android:background="#00000000"
        android:text="@string/login_page"
        android:textColor="#0E0C0C"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/User_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />

    <TextView
        android:id="@+id/User_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="#119C27B0"
        android:gravity="center"
        android:text="@string/input_the_alphabet"
        android:textColor="#101317"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_input"
        android:layout_width="267dp"
        android:layout_height="85dp"
        android:ems="10"
        android:hint="@string/enter_a_z"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#1B5E20"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_name" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="110dp"
        android:layout_height="69dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#993F51B5"
        android:text="@string/Check_btn"
        android:textColor="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#119C27B0"
        android:text="@string/password"
        android:textColor="#101317"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_input" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="270dp"
        android:layout_height="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Password"

        android:inputType="textPassword"
        android:textColor="#1B5E20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>